[package]
name = "lemmekk"
description = "让我康康 - 批量解压工具"
authors = ["Neko <neko@eroneko.eu.org>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
walkdir = "2.4.0"
