[package]
name = "lemmekk"
description = "让我康康 - 批量解压工具"
authors = ["Neko <neko@eroneko.eu.org>"]
version = "0.1.6"
edition = "2021"
default-run = "lemmekk"

readme = "README.md"
repository = "https://github.com/nekokit/lemmekk"
license = "Apache-2.0"

[lib]
name = "lemmekk"

[[bin]]
name = "lemmekk"
path = "src/bin/lemmekk_cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
log = "0.4.21"
log4rs = "1.3.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
walkdir = "2.5.0"
